# OpenShell

./: AGENTS.md
architecture/: compute-runtimes.md  sandbox.md
crates/openshell-core/src/: activity.rs  lib.rs  proto_struct.rs
crates/openshell-driver-docker/: Cargo.toml  README.md
crates/openshell-driver-docker/src/: lib.rs  tests.rs
crates/openshell-driver-podman/: Cargo.toml  README.md
crates/openshell-driver-podman/src/: client.rs  config.rs  container.rs  driver.rs  main.rs
crates/openshell-isolation/: Cargo.toml
crates/openshell-isolation/src/: contract.rs  lib.rs
crates/openshell-isolation/src/contract/: tests.rs
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: event_source.rs  inpod.rs  lib.rs
crates/openshell-server/src/: cli.rs  lib.rs
crates/openshell-server/src/compute/: lease.rs  mod.rs
crates/openshell-supervisor-network/: Cargo.toml
crates/openshell-supervisor-network/src/: identity_source.rs  lib.rs
crates/openshell-supervisor-process/: Cargo.toml
crates/openshell-supervisor-process/src/: boundary_io.rs  lib.rs  log_push.rs  run.rs  ssh.rs  supervisor_session.rs
crates/openshell-supervisor-process/src/bypass_monitor/: mod.rs
docs/reference/: gateway-config.mdx  sandbox-compute-drivers.mdx
e2e/rust/tests/: forward_proxy_graphql_l7.rs  forward_proxy_l7_bypass.rs
rfc/0012-isolation-backend/: README.md  codebase-grounding.md  topology-matrix.md
