# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-isolation"
description = "OpenShell Isolation Backend runtime contract (RFC 0012)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core", default-features = false }
async-trait = "0.1"
futures = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
